--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "devpoly:ropsten && next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "snyk test"
+    "test": "snyk test",
+    "deploy:dev": "npx hardhat run scripts/deploy.js --network localhost",
+    "deploy:ropsten": "npx hardhat run scripts/deploy.js --network ropsten"
   },
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.3",
