package.jon fix for deploy on vercel :twisted_rightwards_arrows:

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "devpoly:ropsten && next build",
+    "build": "deploy:ropsten && next build",
     "start": "next start",
     "lint": "next lint",
     "test": "snyk test",
