--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "nft-markteplace",
-  "private": true,
-  "license": "MIT",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "snyk test",
-    "deploy:dev": "npx hardhat run scripts/deploy.js --network localhost",
-    "deploy:ropsten": "npx hardhat run scripts/deploy.js --network ropsten"
-  },
-  "dependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.3",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^4.4.1",
-    "axios": "^0.24.0",
-    "chai": "^4.3.4",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.2",
-    "hardhat": "^2.8.0",
-    "ipfs-http-client": "^55.0.0",
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "web3modal": "^1.9.4"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.1",
-    "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7",
-    "postcss": "^8.4.5",
-    "snyk": "^1.817.0",
-    "tailwindcss": "^3.0.9"
-  }
+    "name": "nft-markteplace",
+    "private": true,
+    "license": "MIT",
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "test": "snyk test",
+        "compile": "hardhat compile",
+        "deploy:dev": "npx hardhat run scripts/deploy.js --network localhost",
+        "deploy:ropsten": "hardhat run scripts/deploy.js --network ropsten"
+    },
+    "dependencies": {
+        "@nomiclabs/hardhat-ethers": "^2.0.3",
+        "@nomiclabs/hardhat-waffle": "^2.0.1",
+        "@openzeppelin/contracts": "^4.4.1",
+        "axios": "^0.24.0",
+        "chai": "^4.3.4",
+        "ethereum-waffle": "^3.4.0",
+        "ethers": "^5.5.2",
+        "hardhat": "^2.8.0",
+        "ipfs-http-client": "^55.0.0",
+        "next": "12.0.7",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "web3modal": "^1.9.4"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.1",
+        "eslint": "8.6.0",
+        "eslint-config-next": "12.0.7",
+        "postcss": "^8.4.5",
+        "snyk": "^1.817.0",
+        "tailwindcss": "^3.0.9"
+    }
 }
